# lean-canvas-ai

./: .commitlintrc.js  .dockerignore  .eslintignore  .gitignore  .pnpmfile.cjs  .prettierignore  LICENSE  README.md  nx.json  package.json  pnpm-lock.yaml  prettier.config.js
apps/web/: .env.sample  .eslintrc.js  jest.config.ts  package.json  project.json  tailwind.config.js  tsconfig.json
apps/web/src/app/: global-error.tsx  layout.tsx
apps/web/src/app/(entry)/: page.tsx
apps/web/src/app/(entry)/_ui/components/Body/: index.tsx
apps/web/src/app/_ui/components/ErrorBoundary/: index.tsx
apps/web/src/app/_ui/components/Providers/: index.tsx
apps/web/src/app/canvas/[id]/: page.tsx
apps/web/src/app/canvas/[id]/_ui/components/Body/: index.tsx
apps/web/src/app/canvas/[id]/_ui/components/Section/: Edit.tsx  Verify.tsx  (+1 more)
apps/web/src/modules/: config.ts  syntrac.ts
backend/apis/langchain-api/: .env.sample  .gitignore  Dockerfile  Readme.md  main.py  project.json  pyproject.toml  requirements.txt  serverless.yml
backend/apis/langchain-api/app/: main.py
backend/apis/langchain-api/app/repos/: canvas.py
backend/apis/langchain-api/configs/: dev.json  production.json  staging.json
tools/tools/builder/: Readme.md  package.json
tools/tools/builder/src/: api-client.mjs  index.mjs  ts-package.mjs
tools/tools/cli/: Readme.md  package.json
tools/tools/cli-helper/: Readme.md  package.json
tools/tools/cli-helper/src/: env.mjs  index.mjs
tools/tools/cli/cli/: st-build-api-client.mjs  st-build-api.mjs  st-build-ts-package.mjs  st-build-ts.mjs  st-build.mjs
(+1 files in other folders)
